[project]
authors = [
    {name = "Harsh Dadhich", email = "hdadhich01@gmail.com"},
]
dependencies = [
    "beautifulsoup4",
    "cchardet",
    "deta",
    "flask",
    "flask-compress",
    "flask-cors",
    "flask-limiter",
    "gunicorn",
    "httpx",
    "humanize",
    "lxml",
    "orjson",
    "python-dotenv",
    "round-nutrition",
    "schedule",
    "sentry-sdk[flask]",
    "thefuzz[speedup]",
]
description = "Default template for PDM package"
license = {text = "MIT"}
name = "api"
requires-python = "==3.10.*"
version = "0.1.0"
readme = "README.md"

[tool.pdm]
package-type = "application"
